--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19647,3 +19647,7 @@ textarea.form-control-lg {
 .table_striped > *:nth-of-type(odd) {
   box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.05);
 }
+
+.input_width_limit {
+  min-width: 70px;
+}
