--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,3 +20,6 @@
 .table_striped>*:nth-of-type(odd){
     box-shadow: inset 0 0 0 9999px rgba(0,0,0,0.05);
 }
+.input_width_limit{
+    min-width: 70px;
+}
